tests/NormalTests/paczka1/fuzzy1/67393696.err
Error in line 3: u1xYniV S988 78,7
Error in line 23: 6TyxMx S988 240,9
